# mathflow

./: .travis.yml  README.md  mathflow.cabal  stack.yaml
app/: Main.hs
src/: MathFlow.hs
src/MathFlow/: Core.hs  PyString.hs
src/MathFlow/TF/: NN.hs  Train.hs
test/: Spec.hs  doctests.hs
test/MathFlow/: CoreSpec.hs  PyStringSpec.hs  PythonSpec.hs
util/: gen_function_list.py
