name:                mathflow
version:             0.1.0.0
synopsis:            Dependent typed tensorflow modeler
-- description:
homepage:            https://github.com/junjihashimoto/mathflow#readme
license:             BSD3
license-file:        LICENSE
author:              Junji Hashimoto
maintainer:          junji.hashimoto@gmail.com
copyright:           2017 Junji Hashimoto
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/junjihashimoto/mathflow
                     
library
  hs-source-dirs:      src
  exposed-modules:     MathFlow
  build-depends:       base >= 4.7 && < 5
                     , singletons
--                     , tensorflow
  default-language:    Haskell2010

executable mathflow-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mathflow
  default-language:    Haskell2010

test-suite mathflow-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mathflow
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

